# mmprototype

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  market_maker.py  pyproject.toml  requirements.txt
config/: config.example.yaml  config.recorder.yaml  config.sim.yaml
design/: resync_and_cancel_policy.md
docs/: client_connection_guide.md  data_schema.md  local_client_setup.md  math_explained.md  sync_and_checksum.md  ws_relay.md
mm/: avellaneda_stoikov.py  binance_exchange.py  exchange.py  logging_config.py  orderbook_recorder.py  risk.py  runner.py  runner_backtest.py  runner_backtest_replay.py  runner_binance_limit_test.py  runner_binance_test.py  runner_calibrate_schedule.py  runner_sim.py  runner_walkforward.py  strategy.py  utils.py
mm_api/: __init__.py  metrics.py  metrics_store.py  protocols.py  relay.py  rest.py  sources.py  tailer.py
mm_core/: __init__.py  checksum_engine.py  local_orderbook.py  schema.py  symbols.py  sync_engine.py
mm_history/: __init__.py  cli.py  combiner.py  normalizer.py  paginator.py  smoke.py  smoke_gap.py  types.py  writer.py
mm_recorder/: __init__.py  buffered_writer.py  live_writer.py  logging_config.py  metadata.py  recorder.py  recorder_callbacks.py  recorder_context.py  recorder_settings.py  recorder_types.py  replay_validator.py  snapshot.py  ws_stream.py
notebooks/: backtest_diagnostics.ipynb  calibration_schedule_qa.ipynb  latency_analysis.ipynb  poisson_calibration_template.ipynb
scripts/: README.md  align_stream_end_cutoff.py  check_market_data_coverage.py  clean_caches.sh  (+4 more)
(+135 files in other folders)
