[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-recorder"
version = "0.1.0"
description = "Binance Spot market-data recorder producing replay-ready artifacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websockets>=14,<16",
  "certifi",
  "requests",
]

[project.scripts]
mm-recorder = "mm_recorder.recorder:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mm_recorder*", "mm_core*", "mm_history*", "mm_api*"]
